--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ in India.
     <script src="index.js" charset="utf-8"></script>
   </footer>
 </body>
